# LearnSolana

./: .gitignore  commands.txt
candy-machine-nft-collection-test/: cache.json  package-lock.json
candy-machine-nft-collection-test/assets/: crab.png:Zone.Identifier
candy-machine-nft-collection-test/src/: index.ts
candy-machine-ui/: cache.json  config.json  package-lock.json  package.json  validate_errors.json
candy-machine-ui/assets/: 0.json  1.json  2.json  collection.json  collection.png:Zone.Identifier
candy-machine-ui/src/: App.tsx  Home.tsx
hello-anchor/: .pnp.cjs  Anchor.toml  package-lock.json
hello-solana/: Cargo.toml
hello-solana/src/: lib.rs
hello_solana/: Cargo.toml  commands.txt
hello_solana/src/: lib.rs
solana-display-nfts-frontend/: package-lock.json
solana-frontend-intro/pages/: index.tsx
solana-hello-world-client/: package-lock.json
solana-movie-backend/: Cargo.toml
solana-movie-client/: .env.test  package-lock.json  package.json
solana-movie-frontend/: package-lock.json
solana-movie-program/: Cargo.toml
solana-movie-program-frontend/: .prettierrc  package-lock.json
solana-movie-program/src/: lib.rs  processor.rs  state.rs
solana-nft-client/: package-lock.json  package.json
solana-nft-minter-frontend/: package-lock.json  package.json
solana-ping-client/: .env  package.json
solana-reward-tokens/: .env  .gitignore  package-lock.json  package.json
solana-student-intros-frontend/: package-lock.json
solana-token-frontend/: .env  package-lock.json  package.json
spl-token-minting/: package-lock.json  package.json
(+47 files in other folders)
